--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
-name = "ai-assistant"
-version = "3.8.1"
+name = "next-ai"
+version = "3.8.2"
 description = "A cross platform app for LLM ChatBot."
 authors = ["weathery"]
 license = "mit"
 repository = "https://github.com/weathery/ChatGPT"
-default-run = "ai-assistant"
+default-run = "next-ai"
 edition = "2021"
 rust-version = "1.60"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.1", features = [] }
+tauri-build = { version = "1.5.4", features = [] }
 
 [dependencies]
 serde_json = "1.0"
